# theoryforge

./: .gitattributes  .gitignore  API_SPEC.md  CHANGELOG.md  CITATION.cff  LICENSE  README.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  landing.html
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml
apps/: .gitignore  README.md  build.mjs
apps/examples/: self-determination.theory.yaml
apps/py/: index.html  py-runtime.js
apps/r/: index.html  r-runtime.js
apps/shared/: app-core.js  app.css
fixtures/: mediation-demo.theory.yaml  panic-network.theory.yaml
fixtures/expected/: mediation-demo.pipeline.dot  mediation-demo.prereg.md  mediation-demo.provenance.dot  panic-corpus-demo.keyword_cooccurrence.dot  panic-corpus-demo.landscape.json  panic-corpus-demo.theme_landscape.dot  panic-network-2026-v2.appraisal.json  panic-network-2026-v2.development_roadmap.dot  panic-network-2026-v2.dossier.md  panic-network-2026-v2.nomological_net.dot  panic-network-2026-v2.pipeline.dot  panic-network-2026-v2.provenance.dot  panic-network-2026-v2.report.json  panic-network-2026-v2.sem.lavaan  panic-network-2026-v2.workflow.dot  panic-network-2026.context.dot  panic-network-2026.development_roadmap.dot  panic-network-2026.fair.json  panic-network-2026.pipeline.dot  panic-network-2026.prereg.md  panic-network-2026.provenance.dot  panic-network-2026.report.json  panic-network-2026.sem.lavaan  panic-network-2026.workflow.dot  weak-demo.causal_dag.dag  weak-demo.context.dot  weak-demo.development_roadmap.dot  weak-demo.dossier.md  weak-demo.implications.json  weak-demo.nomological_net.dot  weak-demo.pipeline.dot  (+5 more)
python/: 404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  theoryforge.bib
python/about/: index.html
python/api/: index.html
python/changelog/: index.html
python/docs/: about.md  api.md  changelog.md  getting-started.md  index.md  licence.md  literature.md  methodology.md  theoryforge.bib  workflow-modes.md
python/docs/stylesheets/: brand.css  extra.css
python/getting-started/: index.html
python/licence/: index.html
python/literature/: index.html
python/methodology/: index.html
python/overrides/partials/: header.html
python/search/: search_index.json
python/src/theoryforge/: __init__.py  _num.py  _resources.py  core.py  develop.py  diagram.py  diff.py  dossier.py  embedding.py  fair.py  implications.py  lit.py  osf.py  prereg.py  redundancy.py  report_render.py  rigor.py  scoring.py  sem.py  simulate.py  stubs.py
python/src/theoryforge/schema/: rigor_checklist.yaml
python/tests/: conftest.py  test_diagram_redundancy.py  test_io.py  test_lit.py  test_modes.py  test_p3.py  test_p4.py  test_p5.py  test_render_diagram.py  test_rigor.py  test_scalar_singleton.py  test_validation_parity.py
python/workflow-modes/: index.html
r/: 404.html  CONTRIBUTING.html  CONTRIBUTING.md  LICENSE-text.html  LICENSE-text.md  LICENSE.html  LICENSE.md  authors.html  authors.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml  theoryforge.bib
schema/: corpus.schema.json  rigor_checklist.yaml
scripts/: gen_golden.py  parity_check.py  parity_emit.R  render_figures.R  reproduce_all.ps1  reproduce_all.sh
(+271 files in other folders)
