[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "theoryforge"
version = "0.1.0"
description = "A rigorous, reproducible workflow for theory building, development, and testing."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Pablo Bernabeu", email = "pcbernabeu@gmail.com" }]
keywords = ["theory", "metascience", "falsifiability", "psychology", "reproducibility"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff", "mypy"]

[project.urls]
Homepage = "https://github.com/pablobernabeu/theoryforge"
Repository = "https://github.com/pablobernabeu/theoryforge"
Issues = "https://github.com/pablobernabeu/theoryforge/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/theoryforge"]
# Non-Python files inside the package dir (schema/*.json, *.yaml, py.typed) are
# included automatically by hatchling.

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E741"]

[tool.mypy]
python_version = "3.10"
files = ["src/theoryforge"]
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
